[package]
name = "audioinfo"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.25"
walkdir = "2"
crc32fast = "1.3.2"
claxon = "0.4.3"
byteorder = "1.4.3"
hex = "0.4.3"
tracing = "0.1.37"
clap = "4.3.19"
tracing-subscriber = "0.3"
[[bin]]
name = "audioinfo"
path = "src/bin/main.rs"
