[package]
name = "audioinfo"
version = "0.0.1"
edition = "2021"

[dependencies]
walkdir = "2"
crc32fast = "1.3.2"
claxon = "0.4.3"
byteorder = "1.4.3"
hex = "0.4.3"
tracing = "0.1.37"
clap = {version = "4.3.19", features = ["cargo"]}
tracing-subscriber = "0.3"
metaflac = "0.2.5"
[[bin]]
name = "audioinfo"
path = "src/bin/main.rs"
